change prefix string

--- a/configs/config-local.json
+++ b/configs/config-local.json
@@ -1,8 +1,8 @@
 {
   "redis": {
     "host": "localhost:6379/",
-    "username": "default",
-    "password": "redispw",
+    "username": "",
+    "password": "",
     "ssl": false
   },
   "cookieSecret": "myCookieSecret123!",
